--- a/app/views/mixins/main-table-header.jade
+++ b/app/views/mixins/main-table-header.jade
@@ -1,10 +1,7 @@
-mixin main-table-header(columns)
+mixin main-table-header(finalColspan)
   thead
     tr
       th(colspan=2) Blocks
       th Popularity
       th Hints
-    if columns == 6:
-      th(colspan=2) My guess
-    else :
-      th My guess
+      th(colspan=#{finalColspan}) My guess
