--- a/app/index.jade
+++ b/app/index.jade
@@ -72,6 +72,7 @@ html.no-js
     script(src='scripts/app.js')
     script(src='scripts/services/constants.js')
     script(src='scripts/services/blocks.js')
+    script(src='scripts/services/block-fetcher.js')
     script(src='scripts/services/search.js')
     script(src='scripts/services/session.js')
     script(src='scripts/services/pouch.js')
