--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,6 +23,10 @@ ul > li {
   margin-left : 20px;
 }
 
+.bold-text {
+  font-weight : bold;
+}
+
 tr.related-block-row {
 
   border-left: 2px solid #999;
