--- a/app/views/block-detail.jade
+++ b/app/views/block-detail.jade
@@ -36,9 +36,10 @@ html
           //- the following is just to make the table formatting look right
           td: mixin block-label('"12345"', 'hidden', 'block')
           td {{block.soloHintCount}}
-          mixin hints-with-counts('block.hintsWithCounts', false)
+          mixin hints-with-counts('block')
           td
             input(style='width : calc(100% - 16px);',type='text',ng-model='pouch.doc.guesses[block._id]')
+      tobody
         tr(ng-show='block.expanded',ng-repeat='relatedBlock in block.relatedBlocks')
           td
             div(style="display:inline-block;")
@@ -47,7 +48,7 @@ html
           td
             mixin block-label('relatedBlock.ids[1]', 'visible', 'block')
           td {{relatedBlock.count}}
-          mixin hints-with-counts('relatedBlock.hintsWithCounts', false)
+          mixin hints-with-counts('relatedBlock')
           td
             div
               input(style='width: calc(50% - 16px);',type='text',ng-model='pouch.doc.guesses[relatedBlock.ids[0]]')
