--- a/app/views/mixins/hints-with-counts.jade
+++ b/app/views/mixins/hints-with-counts.jade
@@ -1,10 +1,13 @@
-mixin hints-with-counts(propString, asHtml)
+mixin hints-with-counts(blockOrRelatedBlock)
   td.hints-with-counts
     ul
-      li(ng-repeat='hintWithCount in #{propString}')
-        if asHtml
-          span(ng-bind-html="hintWithCount[0]")
-        else
-          span {{hintWithCount[0]}}
+      li(ng-repeat='hintWithCount in #{blockOrRelatedBlock}.hintsWithCounts')
+        span(ng-class="{'bold-text' : hintsToHighlight && hintsToHighlight[hintWithCount[0]]}") {{hintWithCount[0]}}
         span.label.pull-right(ng-show='hintWithCount[1] > 1')
           | &times;{{hintWithCount[1]}}
+    button.btn(href='#',
+        ng-class='{disabled : fetchingBlockHints}',
+        ng-show='#{blockOrRelatedBlock}.hintsRedacted && !#{blockOrRelatedBlock}.fetchedBlockHints',
+        ng-click='fetchBlockHints(#{blockOrRelatedBlock})')
+      | Show {{#{blockOrRelatedBlock}.hintsRedacted}} more hints&nbsp;
+      i.icon-refresh(ng-show='#{blockOrRelatedBlock}.fetchingBlockHints')
