--- a/app/views/mixins/hints-with-counts.jade
+++ b/app/views/mixins/hints-with-counts.jade
@@ -9,5 +9,5 @@ mixin hints-with-counts(blockOrRelatedBlock)
         ng-class='{disabled : fetchingBlockHints}',
         ng-show='#{blockOrRelatedBlock}.hintsRedacted && !#{blockOrRelatedBlock}.fetchedBlockHints',
         ng-click='fetchBlockHints(#{blockOrRelatedBlock})')
-      | Show {{#{blockOrRelatedBlock}.hintsRedacted}} more hints&nbsp;
+      | Show {{#{blockOrRelatedBlock}.hintsRedactedUnique}} more hints&nbsp;
       i.icon-refresh(ng-show='#{blockOrRelatedBlock}.fetchingBlockHints')
