--- a/app/views/blocks/navbar.jade
+++ b/app/views/blocks/navbar.jade
@@ -15,10 +15,10 @@
       ul.pull-right.ng-cloak.horizontal-navbar
         li: span.nav-username(ng-show="session.loggedIn")
           | {{session.username}}
-        li: button.btn.btn-inverse.pull-right.ng-cloak(data-target="#signup-login-modal",
+        li: button.btn.btn-primary.pull-right.ng-cloak(data-target="#signup-login-modal",
         bs-modal="'views/signup-login-modal.html'"
         data-toggle="modal",
         ng-hide="session.loggedIn")
           | Signup / Login
-        li: button.btn.btn-inverse.pull-right.ng-cloak(ng-show="session.loggedIn",ng-click="session.logout()")
+        li: button.btn.btn-primary.pull-right.ng-cloak(ng-show="session.loggedIn",ng-click="session.logout()")
           | Logout
