add a search image, fix images in the dist

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -203,6 +203,13 @@ ul.horizontal-navbar li {
   color : #fff;
 }
 
+.search-query {
+  background-image: url(images/icon-search.png);
+  background-position-x: right;
+  background-position-y: center;
+  background-repeat: no-repeat;
+}
+
 /**
  * Label colors
  */
