--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -5,7 +5,7 @@ html
     include blocks/navbar
     .big-logo
       .big-logo-inner
-        img(src='images/logo-big.png')
+        img(src='../../images/logo-big.png')
         h4.tagline
           | The world's largest crossword puzzle, brought to you by&nbsp;
           a(href='#/faq') bad security
