--- a/app/index.jade
+++ b/app/index.jade
@@ -44,29 +44,27 @@ html.no-js
     //-ga('send', 'pageview');
     script(src='bower_components/jquery/jquery.js')
     script(src='bower_components/angular/angular.js')
-    script(src='bower_components/underscore/underscore.js')
 
     // build:js(app) scripts/plugins.js
-    script(src='bower_components/bootstrap-sass/js/bootstrap-affix.js')
-    script(src='bower_components/bootstrap-sass/js/bootstrap-alert.js')
-    script(src='bower_components/bootstrap-sass/js/bootstrap-dropdown.js')
+    //-script(src='bower_components/bootstrap-sass/js/bootstrap-affix.js')
+    //-script(src='bower_components/bootstrap-sass/js/bootstrap-alert.js')
+    //-script(src='bower_components/bootstrap-sass/js/bootstrap-dropdown.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-tooltip.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-modal.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-transition.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-button.js')
-    script(src='bower_components/bootstrap-sass/js/bootstrap-popover.js')
-    script(src='bower_components/bootstrap-sass/js/bootstrap-typeahead.js')
-    script(src='bower_components/bootstrap-sass/js/bootstrap-carousel.js')
-    script(src='bower_components/bootstrap-sass/js/bootstrap-scrollspy.js')
-    script(src='bower_components/bootstrap-sass/js/bootstrap-collapse.js')
+    //-script(src='bower_components/bootstrap-sass/js/bootstrap-popover.js')
+    //-script(src='bower_components/bootstrap-sass/js/bootstrap-typeahead.js')
+    //-script(src='bower_components/bootstrap-sass/js/bootstrap-carousel.js')
+    //-script(src='bower_components/bootstrap-sass/js/bootstrap-scrollspy.js')
+    //-script(src='bower_components/bootstrap-sass/js/bootstrap-collapse.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-tab.js')
     script(src='bower_components/pouchdb-nightly.min.js/index.js')
-    // endbuild
-    // build:js(app) scripts/modules.js
     script(src='bower_components/angular-resource/angular-resource.js')
     script(src='bower_components/angular-cookies/angular-cookies.js')
     script(src='bower_components/angular-sanitize/angular-sanitize.js')
     script(src='bower_components/angular-strap/dist/angular-strap.js')
+    script(src='bower_components/underscore/underscore.js')
     // endbuild
     script.
       var AppConfig = !{JSON.stringify(config)};
