--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -205,6 +205,7 @@ ul.horizontal-navbar li {
 
 .search-query {
   background-image: url(images/icon-search.png);
+  background-position: right center;
   background-position-x: right;
   background-position-y: center;
   background-repeat: no-repeat;
