--- a/app/index.jade
+++ b/app/index.jade
@@ -34,14 +34,17 @@ html.no-js
       script(src='bower_components/json3/lib/json3.min.js')
     // Add your site or application content here
     .container(ng-view='')
-    //-Google Analytics: change UA-XXXXX-X to be your site's ID
-    //-script.
-    //-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    //-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    //-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    //-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    //-ga('create', 'UA-XXXXX-X');
-    //-ga('send', 'pageview');
+    if config.google_analytics
+      //-Google Analytics: change UA-XXXXX-X to be your site's ID
+      script.
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', !{JSON.stringify(config.google_analytics)});
+        ga('send', 'pageview');
+    else
+      // Dev mode - no google analytics!
     script(src='bower_components/jquery/jquery.js')
     script(src='bower_components/angular/angular.js')
 
