--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -63,7 +63,7 @@ html
               | I made it as a proof-of-concept for Randall's cartoon, to show that the Adobe leak really does
               | make for an excellent crossword puzzle.  I think it's fun!
             p 
-              | And hopefully, my little experiment will also manage to make a statement about the importance of good security.  Protip: if
+              | And hopefully, this little demonstration also makes a good statement about the importance of proper security.  Protip: if
               | I can make a crossword puzzle out of your database, then your security sucks.
             h4 So what can users do to improve their password security?
             p
