--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -22,8 +22,10 @@ html
               | Made with lots of love, and help from:
             ul
               li: a(href='http://www.angularjs.org/') AngularJS
+              li: a(href='http://getbootstrap.com') Bootstrap
               li: a(href='https://couchdb.apache.org/') CouchDB
               li: a(href='http://pouchdb.com/') PouchDB
               li: a(href='https://lucene.apache.org/solr/') Solr
               li: a(href='http://yeoman.io/') Yeoman
+    small.pull-right.muted Page built on !{new Date().toString()}.
 
