--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -14,7 +14,7 @@ html
             p
               | I got the idea from this XKCD 
               | comic:
-            p.image-box
+            .image-box
               a(href='http://xkcd.com/1286/')
                 img(src="http://imgs.xkcd.com/comics/encryptic.png",width=473,height=541)
             h4 How does it work?
