--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -8,7 +8,7 @@ html
         img(src='../../images/logo-big.png')
         h4.tagline
           | The world's largest crossword puzzle, brought to you by&nbsp;
-          a(href='#/faq') bad security
+          a(href='#/faq') poor security
           |.
     .ajax-loader(ng-hide="blocksService.currentPage.length")
     table.table.table-striped.hide-while-loading(ng-show="blocksService.currentPage.length")
