fix problem with too many hints being fetched, fix links in FAQ, show some text when there are no solo hints, fix paging on the search page

--- a/app/index.jade
+++ b/app/index.jade
@@ -12,7 +12,7 @@ html.no-js
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     title Ultimate Crossword
-    meta(name="description", content="The world's largest crossword puzzle, brought to you by poor security.")
+    meta(name="description", content="The world's largest crossword puzzle, brought to you by bad security.")
     meta(name="author", content="Nolan Lawson")
     meta(name='viewport', content='width=device-width, initial-scale=1.0',maximum-scale="1.0", user-scalable="no")
     // Place favicon.ico and apple-touch-icon.png in the root directory
