--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -15,8 +15,7 @@ html
               | I got the idea from this XKCD 
               | comic:
             .image-box
-              a(href='http://xkcd.com/1286/')
-                img(src="http://imgs.xkcd.com/comics/encryptic.png",width=473,height=541)
+              div: a(href='http://xkcd.com/1286/'): img(src="http://imgs.xkcd.com/comics/encryptic.png",width=473,height=541)
             h4 How does it work?
             p
               | When Adobe stored their users' passwords, they encrypted them (which is good).  Unfortunately, they didn't&nbsp;
@@ -61,8 +60,8 @@ html
             p
               | As for the passwords with hints, many of them are ridiculously easy to guess (that's the
               | problem with hints), so we'd be kidding
-              | ourselves if we think the spammers and hackers haven't already gorged themselves on this bounty.
-              | The file is easily available on the Internet.
+              | ourselves to think that the spammers and hackers haven't already gorged themselves on this bounty.
+              | The leaked file is easily available on the Internet.
             p
               | Just to be safe, though, I took the precaution of anonymizing the blocks displayed
               | on this site. Also, I only
@@ -77,11 +76,11 @@ html
             h4 So what can users do to improve their password security?
             p
               | First off, passwords like &nbsp;
-              a(href='#/block/23463') matthew
+              a(href='#/block/1029') matthew
               | , &nbsp;
-              a(href='#/block/131435') adobe69
+              a(href='#/block/5016') adobe69
               | , and even &nbsp;
-              a(href='#/block/100313') keroppi&nbsp;
+              a(href='#/block/3700') keroppi&nbsp;
               | just aren't cutting it, folks.  Human memory has its limits, though, so
               | we need a good compromise between &nbsp;
               span.monospace-font pikachu
