--- a/app/views/search.jade
+++ b/app/views/search.jade
@@ -21,7 +21,7 @@ html
             mixin block-label('result.blockIds[0]', 'visible', 'block')
         //- the following is just to make the table formatting look right
         td: mixin block-label('"12345"', 'hidden', 'block')
-        td {{result.count}}
+        td {{result.count | number}}
         mixin hints-with-counts('result')
         td
           input(style='width : calc(100% - 16px);',type='text',ng-model='pouch.doc.guesses[result.blockIds[0]]')
@@ -31,7 +31,7 @@ html
           div(style="display:inline-block;")
             mixin block-label('result.blockIds[0]', 'visible', 'block')
         td: mixin block-label('result.blockIds[1]', 'visible', 'block')
-        td {{result.count}}
+        td {{result.count | number}}
         mixin hints-with-counts('result')
         td
           input(style='width: calc(50% - 16px);',type='text',ng-model='pouch.doc.guesses[result.blockIds[0]]')
