--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -147,15 +147,21 @@ tr.related-block-row {
 
 .image-box {
   text-align:center;
-  & > a > img {
-    padding : 15px 25px;
-    background : #ddd;
-    border-radius : 2px;
 
-    border : transparent 2px solid;
+  & div {
+    display: inline-block;
+    border: 1px solid #ddd;
+    text-align: center;
+    background-color: #f3f3f3;
+    padding: 4px 20px 7px 20px;
+    margin: 10px;
+    border-radius: 3px;
 
+    cursor: pointer;
+    cursor: hand;
+    border : 1px solid #ddd;
     &:hover {
-      border : #0088cc 2px solid;
+      border : 1px solid #0088cc;
     }
   }
 }
