show a "loading" text when the user is saving a doc

--- a/app/views/blocks/navbar.jade
+++ b/app/views/blocks/navbar.jade
@@ -13,8 +13,9 @@
         form.navbar-search.pull-left(ng-submit="performSearch()")
           input.search-query(type="text",placeholder="Search",ng-model="searchService.q")
         ul.pull-right.ng-cloak.horizontal-navbar
-          li: span.nav-username(ng-show="session.loggedIn")
-            | {{session.username}}
+          li(ng-show="session.loggedIn",ng-switch on="session.pouch.syncWithPouchInProgress")
+            span.nav-username(ng-switch-when="true") Saving&hellip;
+            span.nav-username(ng-switch-default) {{session.username}}
           li: button.btn.btn-primary.pull-right.ng-cloak(data-target="#signup-login-modal",
           bs-modal="'views/signup-login-modal.html'"
           data-toggle="modal",
