--- a/app/views/blocks/related-block-rows.jade
+++ b/app/views/blocks/related-block-rows.jade
@@ -10,8 +10,8 @@ tr.related-block-row(ng-show='block.expanded',ng-repeat='relatedBlock in block.r
     span(bs-tooltip='relatedBlock.joinedHints') {{relatedBlock.shortJoinedHints}}
   td
     div
-      input(style='width: calc(50% - 16px);',type='text',ng-model='pouch.doc.guesses[relatedBlock.ids[0]]')
-      input(style='width: calc(50% - 16px);',type='text',ng-model='pouch.doc.guesses[relatedBlock.ids[1]]')
+      mixin block-input('relatedBlock.ids[0]', true)
+      mixin block-input('relatedBlock.ids[1]', true)
   td
 tr.related-block-row(ng-show='block.expanded && block.moreRelatedBlocks > 0')
   td
