--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -1,5 +1,6 @@
 html
   include mixins/block-label
+  include mixins/block-input
   include mixins/main-table-header
   body
     include blocks/navbar
