--- a/app/views/blocks/main-block-row.jade
+++ b/app/views/blocks/main-block-row.jade
@@ -12,7 +12,7 @@ tr
     span(ng-switch-default bs-tooltip='block.joinedHints')
       | {{block.shortJoinedHints}}
   td
-    input(style='width : calc(100% - 16px);',type='text',ng-model='pouch.doc.guesses[block._id]')
+    mixin block-input('block._id', false)
   td
     button.btn(style="width:100%",ng-show='block.followingBlockCount || block.precedingBlockCount',
     ng-class="{'disabled' : block.loadingRelated}",ng-click="expandOrCollapse(block)")
