--- a/app/views/blocks/navbar.jade
+++ b/app/views/blocks/navbar.jade
@@ -14,8 +14,10 @@
           input.search-query(type="text",placeholder="Search",ng-model="searchService.q")
         ul.pull-right.ng-cloak.horizontal-navbar
           li(ng-show="session.loggedIn",ng-switch on="session.pouch.syncWithPouchInProgress")
-            span.nav-username(ng-switch-when="true") Saving&hellip;
-            span.nav-username(ng-switch-default) {{session.username}}
+            span.nav-username(ng-switch-when="true")
+              | Saving&hellip;&nbsp;
+              i.icon-white.icon-refresh
+            span.nav-username(ng-switch-default){{session.username}}
           li: button.btn.btn-primary.pull-right.ng-cloak(data-target="#signup-login-modal",
           bs-modal="'views/signup-login-modal.html'"
           data-toggle="modal",
